--- a/src/DiagramToolkit/DiagramToolkit.Api/DiagramToolkit.Api.csproj
+++ b/src/DiagramToolkit/DiagramToolkit.Api/DiagramToolkit.Api.csproj
@@ -57,7 +57,7 @@
     <Compile Include="IToolbox.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="States\EditState.cs" />
-    <Compile Include="States\PreviewState.cs" />
+    <Compile Include="States\FreeHandDrawingState.cs" />
     <Compile Include="States\StaticState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
